--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"@prisma/client": "^4.2.1",
 		"cors": "^2.8.5",
 		"express": "^4.18.1",
-		"ts-node-dev": "^2.0.0"
+		"ts-node-dev": "^2.0.0",
+		"uuidv4": "^6.2.13"
 	}
 }
