--- a/package.json
+++ b/package.json
@@ -21,14 +21,18 @@
 		"@types/cors": "^2.8.12",
 		"@types/express": "^4.17.13",
 		"@types/node": "^18.7.11",
+		"@types/nodemailer": "^6.4.5",
 		"prisma": "^4.2.1",
 		"ts-node": "^10.9.1",
 		"typescript": "^4.7.4"
 	},
 	"dependencies": {
 		"@prisma/client": "^4.2.1",
+		"@types/nodemailer-smtp-transport": "^2.7.5",
 		"cors": "^2.8.5",
 		"express": "^4.18.1",
+		"nodemailer": "^6.7.8",
+		"nodemailer-smtp-transport": "^2.4.2",
 		"ts-node-dev": "^2.0.0",
 		"uuidv4": "^6.2.13"
 	}
